--- a/Etudiant-mm_langReco/.project
+++ b/Etudiant-mm_langReco/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Etudiant-mm_langReco</name>
+	<name>Etudiant-mm_langModel</name>
 	<comment></comment>
 	<projects>
 	</projects>
