Eddited the name of the project
Hope that's over for this part..

--- a/CedricBerland-NathanMaraval-LangModel/.project
+++ b/CedricBerland-NathanMaraval-LangModel/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Etudiant-mm_langModel</name>
+	<name>CedricBerland-NathanMaraval-LangModel</name>
 	<comment></comment>
 	<projects>
 	</projects>
